--- a/Test app/packages.config
+++ b/Test app/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
