--- a/Test app/Test app.csproj
+++ b/Test app/Test app.csproj
@@ -139,6 +139,11 @@
   <ItemGroup>
     <Resource Include="Icons\My.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\直接掃描%28雙面%29_忽略背面_D.png" />
+    <Resource Include="Icons\直接掃描%28雙面%29_忽略背面_N.png" />
+    <Resource Include="Icons\直接掃描%28雙面%29_忽略背面_O.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
